:lipstick: Fixed alignments

--- a/src/app/users/data-upload/data-upload.component.scss
+++ b/src/app/users/data-upload/data-upload.component.scss
@@ -39,7 +39,7 @@
     margin-bottom: 3%;
   }
   .nested-card-container {
-    width: 315px;
+    width: 23vw;
     flex-wrap: wrap;
     margin-right: 1%;
     .card {
@@ -309,15 +309,10 @@ table .input-group {
   z-index: 9;
 }
 
-.multiApprovalModal {
-  .modal-content {
-    background: red;
-  }
-}
-
 #multiApprovalModal {
   display: flex;
   align-items: center;
+  position: relative;
   // padding: 3% 2% 5% 2%;
   flex-wrap: wrap;
 
@@ -329,20 +324,67 @@ table .input-group {
   .states-selection {
     display: flex;
     align-items: center;
+    padding-left: 2%;
+    margin-bottom: 0px;
+  }
+  .stateName {
+    display: inline-block;
+    width: 24%;
   }
   .states {
     display: block;
     width: 100%;
     padding-left: 2%;
-    .stateName {
-      display: inline-block;
-      width: 24%;
-    }
   }
 }
 
 .Approvalbuttons {
+  width: 100%;
   button {
     margin: 2%;
+  }
+}
+
+::ng-deep {
+  #multiApprovalModalPopup {
+    position: relative;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    header {
+      position: relative;
+      margin-bottom: 5%;
+      background-color: #047474;
+      color: white;
+      padding: 3% 2% 3% 2%;
+      h3 {
+        margin-top: 0px;
+      }
+    }
+    .fa {
+      transform: scale(1.5);
+      float: right !important;
+      position: relative;
+      right: 3%;
+      position: absolute;
+      top: 18%;
+      cursor: pointer;
+    }
+    hr {
+      display: block;
+      width: 75vw;
+      margin: auto;
+      margin-top: 2%;
+      margin-bottom: 2%;
+      border-top: 1px solid #aaa;
+    }
+    .note {
+      position: absolute;
+      bottom: 2%;
+      color: red;
+      background: rgb(255, 255, 255);
+      width: 95%;
+      left: 2%;
+    }
   }
 }
